--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 
-theme: just-the-docs
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Sara Molas Medina, PhD
 description:  Computational Neuroscience × Biomedical Sciences × Mechanistic Interpretability x Deep Learning
 color_scheme: light
