--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Sara Molas Medina, PhD
-description:  **Mechanistic interpretability researcher with a background in computational neuroscience.**
+description:  Mechanistic interpretability researcher with a background in computational neuroscience
 color_scheme: light
 search_enabled: false
 
