--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ nav:
   - title: Research
     url: /research
   - title: CV
-    url: /assets/pdf/Sara_Molas_CV.pdf
+    url: /assets/CV_MolasMedina.pdf
   - title: Contact
     url: /contact
